# typesafe-monads

./: .gitignore  .travis.yml  LICENSE  README.md  README.org  functor.py  monads.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yaml  todo.yaml
monads/: __init__.py  applicative.py  currying.py  functor.py  future.py  list.py  maybe.py  maybet.py  monad.py  monoid.py  reader.py  result.py  resultt.py  set.py  tools.py
monads/transformers/: maybe.py
tests/: fixtures.py  test_applicatives.py  test_currying.py  test_functors.py  test_future.py  test_list.py  test_maybe.py  test_monads.py  test_monoids.py  test_reader.py  test_result.py  test_resultt.py  test_set.py
